# gdcdatamodel

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .travis.yaml  .travis.yml  MANIFEST.in  Pipfile  README.md  dev-requirements.in  dev-requirements.txt  docker-compose-ci.yaml  psql-users.sh  pyproject.toml  requirements.in  requirements.txt  setup.py  setup.sh  test-requirements.txt  tox.ini  translate.yml
PsqlGraph/: .gitignore  setup.py
avro/: aliquot.avsc  analyte.avsc  annotation.avsc  archive.avsc  center.avsc  file.avsc  gen_toplevel_schema.py  participant.avsc  portion.avsc  program.avsc  project.avsc  sample.avsc  schemata_to_graphviz.py  test_examples.py  tissue_source_site.avsc
bam_validator/: run.py  salt_minion
cghub_data_downloader/: run.py  salt_minion  settings.yaml
cghub_signpost_sync/: run.py  salt_minion  settings.yaml
common/: local.json
data/: bcr.yaml  cghub.yaml  sample_cghub_tcga.xml
data_model/: center_codes.yaml  index.py  merge.py  neo2grapviz.py  run.py  settings.yaml
dcc_data_downloader/: consul.json  salt_minion
dcc_datamodel_sync/: README  README.md  consul.json  run.py  settings.yaml
dcc_downloader/: Dockerfile  consul.json  defaults.json  salt_minion
dcc_signpost_meta_sync/: consul.json  salt_minion
docs/: Makefile  README.md  legacy_import_plan.md
downloaders/: downloaders.py  requirements.txt  target_downloader.py  tcga_downloader.py
example/: settings.yaml
examples/: jupyter_example.ipynb
gdcdatamodel/: __init__.py  __main__.py  gdc_postgres_admin.py  gdcdatamodel.py  graph.py  mapped_entities.py  mappings.py  query.py  validators.py
html/: test.html
migrations/: async_transactions.py  index_secondary_keys.py  node_shrouder.py  notifications.py  set_null_edge_columns.py  test_update_case_cache.py  update_case_cache.py  update_case_cache_append_only.py  update_legacy_states.py  zero_year_of_birth.py
plugins/: base.py  file.py  stdout.py  urls.py
proto/: bcr.py
sync_cghub_metadata/: consul.json  import_tcga_cghub.py  local.json  settings.py  tcga_cghub_import.py
sync_dcc_metadata/: Dockerfile  defaults.json  import_tcga_dcc.py  (+2 more)
(+445 files in other folders)
