[tool.poetry]
name = "gen3datamodel"
version = "3.2.0"
description = "Repo to keep information about the GDC data model design."
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
cdislogging = "^1.1.1"
attrs = "19.3.0"
dictionaryutils = "3.0.0"
jsonschema = ">=3.2,<4.0"
more-itertools = "7.2.0"
zipp = "0.6.0"
importlib-metadata = "0.23"
pyrsistent = "0.15.4"
pytz = "^2024.1"
psqlgraph = ">=3.0,<4.0"
psycopg2-binary = "2.8.2"
sqlalchemy = "1.3.3"
strict-rfc3339 = "0.7"
rstr = "2.2.6"
gdcdictionary = "^1.2.0"


[tool.poetry.group.dev.dependencies]
graphviz = ">=0.4,<1.0"
jupyter = ">=1.0,<2.0"
pytest = "^8.1.1"

[tool.poetry.scripts]
gdc_postgres_admin = "gdcdatamodel.gdc_postgres_admin:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "gdcdatamodel/xml_mappings/*.yaml"
